style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

body {
    font-family: 'Roboto', sans-serif;
    background-color: #f9f9f9;
    margin: 0;
    padding: 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1 {
    font-size: 28px;
    margin-bottom: 10px;
    color: #333;
}

#titleText {
    cursor: pointer;
}

#container {
    background-color: white;
    padding: 30px;
    border-radius: 12px;
    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
    width: 90%;
    max-width: 500px;
    display: flex;
    flex-direction: column;
    gap: 25px;
}

label {
    display: block;
    margin-bottom: 6px;
    font-weight: 500;
    color: #333;
}

input[type="text"] {
    width: 97%;
    padding: 10px 6px;
    font-size: 16px;
    border: 1px solid #ccc;
    border-radius: 6px;
    outline: none;
    transition: border-color 0.3s;
}

input[type="text"]:focus {
    border-color: #007BFF;
}

#categorySelect {
    min-width: 560px;
    width: 22.5%;
    font-size: 16px;
    padding: 12px;
    margin-bottom: 10px;
    border-radius: 8px;
    text-align: center;
}

select {
    appearance: none;
    width: 100%;
    padding: 10px 6px;
    font-size: 16px;
    border: 1px solid #ccc;
    border-radius: 6px;
    outline: none;
    transition: border-color 0.3s;
}

select:focus {
    border-color: #007BFF;
}

input[type="button"] {
    background-color: #007BFF;
    color: white;
    border: none;
    padding: 12px;
    font-size: 16px;
    border-radius: 6px;
    cursor: pointer;
    transition: background-color 0.3s;
}

input[type="button"]:hover {
    background-color: #0056b3;
}

.form-section {
    flex-direction: column;
    gap: 25px;
    display: flex;
}

p {
    font-weight: 500;
}

#resultText {
    margin-top: 0px;
    margin-bottom: 20px;
}

@media only screen and (max-width: 640px) {
    #categorySelect {
        min-width: 200px;
        width: 50%;
    }
}

